--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,13 @@
-// Начните писать стили здесь
+@import "./blocks/main-header.less";
+@import "./blocks/main-container.less";
+@import "./blocks/advantages.less";
+@import "./blocks/map.less";
+@import "./blocks/footer.less";
+@import "./blocks/welcome-anthem.less";
+@import "./blocks/intro.less";
+@import "./blocks/page__body.less";
+@import "./blocks/booking.less";
+@import "./blocks/advantages__item.less";
+@import "./blocks/advantages__true-town.less";
+@import "./blocks/grey-back.less";
+@import "./blocks/site-list.less";
