--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,6 +1,44 @@
 .advantages {
-  font-weight: 400;
-  font-size: 21px;
-  line-height: 20px;
-  width: 100%;
+  width: 320px;
+  text-align: center;
+
+.grey-back {
+  background-color:rgba(238, 238, 238, 1);
+
+  h3 {
+    font-style: "PT Sans";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+  }
+
+  .advantages__description {
+      font-style: "PT Sans";
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 21px;
+      text-align: center;
+  }
+}
+.advantages__true-town {
+  background-color: rgba(129, 179, 210, 1);
+  color: #ffff;
+
+  h3 {
+    font-style: "PT Sans";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+  }
+
+  .advantages__description {
+    font-style: "PT Sans";
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 21px;
+      text-align: center;
+  }
+}
 }
