--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,7 +1,21 @@
 .intro {
-  font-size: 21px;
+  width: 320px;
   text-transform: uppercase;
   text-align: center;
-  margin: 48px 124px 56px 124px;
-  line-height: 35px;
+
+  h1 {
+    font-style: "PT Sans";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+  }
+
+    .intro__discription {
+    font-style: "PT Sans";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    }
 }
