--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,7 +1,14 @@
 .main-header {
-  width: 1200px;
-  font-size: 18px;
-  line-height: 21px;
-  font-weight: 700;
+  color: #ffffff;
+  width: 320px;
   text-transform: uppercase;
+  text-decoration: none;
+
+  .site-list__item {
+    font-style: "PT Sans";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    color: #ffffff;
+  }
 }
