--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,9 +5,5 @@
 @import "./blocks/footer.less";
 @import "./blocks/welcome-anthem.less";
 @import "./blocks/intro.less";
-@import "./blocks/page__body.less";
+@import "./blocks/common.less";
 @import "./blocks/booking.less";
-@import "./blocks/advantages__item.less";
-@import "./blocks/advantages__true-town.less";
-@import "./blocks/grey-back.less";
-@import "./blocks/site-list.less";
