--- a/source/less/blocks/booking.less
+++ b/source/less/blocks/booking.less
@@ -1,8 +1,21 @@
 .booking {
   text-align: center;
-  padding: 61px 166px 58px 166px;
   text-transform: uppercase;
-  font-weight: 400;
-  font-size: 21px;
-  line-height: 35px;
+  width: 320px;
+
+  h2 {
+    font-style: "PT Sans";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+  }
+
+    .booking__discription {
+    font-style: "PT Sans";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    }
 }
