--- a/source/less/blocks/common.less
+++ b/source/less/blocks/common.less
@@ -2,39 +2,31 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/ptsans-400.woff2") format("woff2");
+  src: url("../fonts/ptsans.woff2") format("woff2");
   font-display: swap;
 }
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/ptsans-700.woff2") format("woff2");
+  src: url("../fonts/ptsansbold.woff2") format("woff2");
   font-display: swap;
 }
 .body {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   min-height: 100%;
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 24px;
   color: #000000;
   background-color: #FFFFFF;
-  width: 1200px;
+  width: 320px;
   padding: 0;
   margin: 0 auto;
   border: 0;
   box-sizing: border-box;
-}
-ul {
-  padding: 0;
-  margin: 0 auto;
-  border: 0;
-  box-sizing: border-box;
-}
-li {
-  list-style-type: none;
 }
 .button {
   font-family: inherit;
@@ -47,7 +39,7 @@ li {
   text-decoration: none;
 }
 
-    .visually-hidden {
+    /*.visually-hidden {
       position: absolute;
       width: 1px;
       height: 1px;
@@ -57,4 +49,4 @@ li {
       clip: rect(0 0 0 0);
       overflow: hidden;
       display: none;
-    }
+    } */
