--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,5 +1,6 @@
 .map {
   background-image: url("../img/images/index-map.jpg.jpg");
-  width: 100%;
-  height: 500px;
+  background-repeat: no-repeat;
+  width: 320px;
+  height: 300px;
 }
