--- a/source/less/blocks/welcome-anthem.less
+++ b/source/less/blocks/welcome-anthem.less
@@ -1,10 +1,11 @@
 .welcome-anthem {
-  color: #000000;
+width: 320px;
+height: 300px;
+color: #000000;
 background-color: #FFFFFF;
 background-image: url("../img/images/index-background.jpg");
-background-size: 100% auto;
 background-repeat: no-repeat;
+background-size: auto;
 text-align: center;
-padding-top: 10px;
-margin: 0 auto;
-padding: 40px 0 90px 0; }
+padding-top: 90px;
+}
