--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,44 +1,28 @@
 .advantages {
-  width: 320px;
   text-align: center;
 
-.grey-back {
-  background-color:rgba(238, 238, 238, 1);
+  &__list {
+    list-style-type: none;
+  }
 
-  h3 {
-    font-style: "PT Sans";
+  &__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
-    text-align: center;
   }
 
-  .advantages__description {
-      font-style: "PT Sans";
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 21px;
-      text-align: center;
+  &__description {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
   }
 }
-.advantages__true-town {
-  background-color: rgba(129, 179, 210, 1);
+
+.advantages__item—greyback {
+  background-color: rgba(238, 238, 238, 1);
+}
+
+.advantages__item—blueback {
   color: #ffff;
-
-  h3 {
-    font-style: "PT Sans";
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 26px;
-    text-align: center;
-  }
-
-  .advantages__description {
-    font-style: "PT Sans";
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 21px;
-      text-align: center;
-  }
-}
+  background-color: rgba(129, 179, 210, 1);
 }
