--- a/source/less/blocks/booking.less
+++ b/source/less/blocks/booking.less
@@ -1,21 +1,17 @@
 .booking {
   text-align: center;
-  text-transform: uppercase;
-  width: 320px;
 
-  h2 {
-    font-style: "PT Sans";
+  &__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
     text-align: center;
   }
 
-    .booking__discription {
-    font-style: "PT Sans";
+  &__description {
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
     text-align: center;
-    }
+  }
 }
