--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "./blocks/main-header.less";
+@import "./blocks/main-nav.less";
 @import "./blocks/main-container.less";
 @import "./blocks/advantages.less";
 @import "./blocks/map.less";
