--- a/source/less/blocks/common.less
+++ b/source/less/blocks/common.less
@@ -5,6 +5,7 @@
   src: url("../fonts/ptsans.woff2") format("woff2");
   font-display: swap;
 }
+
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -12,22 +13,20 @@
   src: url("../fonts/ptsansbold.woff2") format("woff2");
   font-display: swap;
 }
-.body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+body {
   min-height: 100%;
   font-family: "PT Sans", sans-serif;
+  text-transform: uppercase;
   font-size: 16px;
   line-height: 24px;
   color: #000000;
   background-color: #FFFFFF;
   width: 320px;
-  padding: 0;
   margin: 0 auto;
-  border: 0;
   box-sizing: border-box;
 }
+
 .button {
   font-family: inherit;
   font-size: 16px;
@@ -39,7 +38,7 @@
   text-decoration: none;
 }
 
-    /*.visually-hidden {
+/*.visually-hidden {
       position: absolute;
       width: 1px;
       height: 1px;
