--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,6 +1,9 @@
 .footer {
-  width: 320px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
+
+  &__hashtag {
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 26px;
+  }
 }
