--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,21 +1,15 @@
 .intro {
-  width: 320px;
-  text-transform: uppercase;
   text-align: center;
 
-  h1 {
-    font-style: "PT Sans";
+  &__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
-    text-align: center;
   }
 
-    .intro__discription {
-    font-style: "PT Sans";
+  &__description {
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
-    text-align: center;
-    }
+  }
 }
