Верстка каталога + правки 09.12
Верстка каталога + правки 09.12

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -18,11 +18,11 @@
   }
 }
 
-.advantages__item—greyback {
+.advantages__item--greyback {
   background-color: rgba(238, 238, 238, 1);
 }
 
-.advantages__item—blueback {
+.advantages__item--blueback {
   color: #ffff;
   background-color: rgba(129, 179, 210, 1);
 }
