--- a/source/less/blocks/booking.less
+++ b/source/less/blocks/booking.less
@@ -5,13 +5,18 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
-    text-align: center;
   }
 
   &__description {
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
-    text-align: center;
+  }
+
+  &__navigation-link {
+    background-color: rgba(129, 179, 210, 1);
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 26px;
   }
 }
