--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,7 @@
 @import "./blocks/intro.less";
 @import "./blocks/common.less";
 @import "./blocks/booking.less";
+@import "./blocks/catalog-anthem.less";
+@import "./blocks/catalog-intro.less";
+@import "./blocks/catalog-advantages.less";
+@import "./blocks/catalog-booking.less";
