--- a/source/less/blocks/catalog-welcome.less
+++ b/source/less/blocks/catalog-welcome.less
@@ -1,4 +1,5 @@
-.catalog-anthem {
+.catalog-welcome {
+    height: 106px;
     color: #000000;
     background-color: #FFFFFF;
     background-image: url("../img/images/catalog-background.jpg");
@@ -6,5 +7,4 @@
     background-size: auto;
     text-align: center;
     padding-top: 108px;
-    padding-bottom: 67px;
 }
