--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,8 +6,6 @@
 @import "./blocks/welcome-anthem.less";
 @import "./blocks/intro.less";
 @import "./blocks/common.less";
-@import "./blocks/booking.less";
-@import "./blocks/catalog-anthem.less";
-@import "./blocks/catalog-intro.less";
-@import "./blocks/catalog-advantages.less";
-@import "./blocks/catalog-booking.less";
+@import "./blocks/outro.less";
+@import "./blocks/catalog-photos.less";
+@import "./blocks/catalog-welcome.less";
