--- a/source/less/blocks/outro.less
+++ b/source/less/blocks/outro.less
@@ -1,15 +1,22 @@
-.catalog-booking {
+.outro {
   text-align: center;
 
   &__title {
     font-weight: 700;
-    font-size: 21px;
+    font-size: 18px;
     line-height: 26px;
   }
 
   &__description {
     font-weight: 400;
     font-size: 18px;
+    line-height: 26px;
+  }
+
+  &__navigation-link {
+    background-color: rgba(129, 179, 210, 1);
+    font-weight: 700;
+    font-size: 21px;
     line-height: 26px;
   }
 }
