--- a/4/css/style.css
+++ b/4/css/style.css
@@ -1,69 +1,54 @@
-.main-header {
-  color: #ffffff;
-  width: 320px;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-.main-header .site-list__item {
-  font-style: "PT Sans";
+.main-nav {
+  text-align: center;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  color: #ffffff;
+  color: #fff;
+}
+.main-nav__toggle {
+  background-color: #81b3d2;
+}
+.main-nav__list {
+  background-color: #81b3d2;
+  list-style-type: none;
 }
 .advantages {
-  width: 320px;
   text-align: center;
 }
-.advantages .grey-back {
+.advantages__list {
+  list-style-type: none;
+}
+.advantages__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+}
+.advantages__description {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+}
+.advantages__item--greyback {
   background-color: #eeeeee;
 }
-.advantages .grey-back h3 {
-  font-style: "PT Sans";
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 26px;
-  text-align: center;
-}
-.advantages .grey-back .advantages__description {
-  font-style: "PT Sans";
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  text-align: center;
-}
-.advantages .advantages__true-town {
-  background-color: #81b3d2;
+.advantages__item--blueback {
   color: #ffff;
-}
-.advantages .advantages__true-town h3 {
-  font-style: "PT Sans";
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 26px;
-  text-align: center;
-}
-.advantages .advantages__true-town .advantages__description {
-  font-style: "PT Sans";
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  text-align: center;
+  background-color: #81b3d2;
 }
 .map {
   background-image: url("../img/images/index-map.jpg.jpg");
   background-repeat: no-repeat;
-  width: 320px;
   height: 300px;
 }
 .footer {
-  width: 320px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
+}
+.footer__hashtag {
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
 }
 .welcome-anthem {
-  width: 320px;
   height: 300px;
   color: #000000;
   background-color: #FFFFFF;
@@ -74,23 +59,17 @@
   padding-top: 90px;
 }
 .intro {
-  width: 320px;
-  text-transform: uppercase;
   text-align: center;
 }
-.intro h1 {
-  font-style: "PT Sans";
+.intro__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  text-align: center;
 }
-.intro .intro__discription {
-  font-style: "PT Sans";
+.intro__description {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  text-align: center;
+  font-size: 18px;
+  line-height: 26px;
 }
 @font-face {
   font-family: "PT Sans";
@@ -106,20 +85,16 @@
   src: url("../fonts/ptsansbold.woff2") format("woff2");
   font-display: swap;
 }
-.body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+body {
   min-height: 100%;
   font-family: "PT Sans", sans-serif;
+  text-transform: uppercase;
   font-size: 16px;
   line-height: 24px;
   color: #000000;
   background-color: #FFFFFF;
   width: 320px;
-  padding: 0;
   margin: 0 auto;
-  border: 0;
   box-sizing: border-box;
 }
 .button {
@@ -143,23 +118,49 @@
       overflow: hidden;
       display: none;
     } */
-.booking {
+.outro {
   text-align: center;
-  text-transform: uppercase;
-  width: 320px;
 }
-.booking h2 {
-  font-style: "PT Sans";
+.outro__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  text-align: center;
 }
-.booking .booking__discription {
-  font-style: "PT Sans";
+.outro__description {
   font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+}
+.outro__navigation-link {
+  background-color: #81b3d2;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+}
+.catalog-photos__list {
+  list-style-type: none;
+}
+.catalog-photos__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+}
+.catalog-photos__likes-amount {
+  font-weight: 700;
   font-size: 14px;
   line-height: 21px;
+}
+.catalog-photos__author {
+  text-transform: none;
+}
+.catalog-welcome {
+  height: 106px;
+  color: #000000;
+  background-color: #FFFFFF;
+  background-image: url("../img/images/catalog-background.jpg");
+  background-repeat: no-repeat;
+  background-size: auto;
   text-align: center;
+  padding-top: 108px;
 }
 /*# sourceMappingURL=style.css.map */
