--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,5 +1,5 @@
 .map {
-  background-image: url("../img/images/index-map.jpg.jpg");
+  background-image: url("../images/index-map.jpg.jpg");
   background-repeat: no-repeat;
   height: 300px;
 }
