--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,4 @@
 @import "./blocks/outro.less";
 @import "./blocks/catalog-photos.less";
 @import "./blocks/catalog-welcome.less";
+@import "./blocks/site-list.less";
