--- a/4/css/style.css
+++ b/4/css/style.css
@@ -36,7 +36,7 @@
   background-color: #81b3d2;
 }
 .map {
-  background-image: url("../img/images/index-map.jpg.jpg");
+  background-image: url("../images/index-map.jpg.jpg");
   background-repeat: no-repeat;
   height: 300px;
 }
@@ -52,7 +52,7 @@
   height: 300px;
   color: #000000;
   background-color: #FFFFFF;
-  background-image: url("../img/images/index-background.jpg");
+  background-image: url("../images/index-background.jpg");
   background-repeat: no-repeat;
   background-size: auto;
   text-align: center;
@@ -99,8 +99,8 @@ body {
 }
 .button {
   font-family: inherit;
-  font-size: 16px;
-  line-height: 16px;
+  font-size: 21px;
+  line-height: 26px;
   font-weight: 700;
   text-align: center;
   color: #ffffff;
@@ -131,12 +131,6 @@ body {
   font-size: 18px;
   line-height: 26px;
 }
-.outro__navigation-link {
-  background-color: #81b3d2;
-  font-weight: 700;
-  font-size: 21px;
-  line-height: 26px;
-}
 .catalog-photos__list {
   list-style-type: none;
 }
@@ -157,10 +151,14 @@ body {
   height: 106px;
   color: #000000;
   background-color: #FFFFFF;
-  background-image: url("../img/images/catalog-background.jpg");
+  background-image: url("../images/catalog-background.jpg");
   background-repeat: no-repeat;
   background-size: auto;
   text-align: center;
   padding-top: 108px;
+}
+.site-list__link {
+  text-decoration: none;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
