--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -2,4 +2,13 @@
   background-image: url("../images/index-map.jpg.jpg");
   background-repeat: no-repeat;
   height: 300px;
+
+  @media (min-width: @tablet-width) {
+    width: 435px;
+    padding: 10px 60px;
+  }
+  @media (min-width: @desktop-width) {
+    width: 435px;
+    padding: 10px 160px;
+    }
 }
