--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,20 +1,34 @@
 .advantages {
   text-align: center;
+  overflow: hidden;
+  @media (min-width: @tablet-width) {
+    width: 570px;
+  }
+  @media (min-width: @desktop-width) {
+      width: 768px;
+    }
 
   &__list {
+    display: flex;
+    flex-direction: column;
     list-style-type: none;
+    padding: 0;
+    margin: 0;
   }
 
   &__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
+    margin-top: 0;
+    padding-top: 25px;
   }
 
   &__description {
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
+    padding-bottom: 35px;
   }
 }
 
