--- a/source/less/blocks/catalog-photos.less
+++ b/source/less/blocks/catalog-photos.less
@@ -1,7 +1,28 @@
 .catalog-photos {
+  text-align: center;
 
+  @media (min-width: @tablet-width) {
+    width: 570px;
+  }
+  @media (min-width: @desktop-width) {
+      width: 768px;
+    }
   &__list {
     list-style-type: none;
+    @media (min-width: @tablet-width) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    @media (min-width: @desktop-width) {
+      display: flex;
+      flex-wrap: wrap;
+      }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   &__title {
