--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,13 +1,31 @@
 .intro {
+  margin: 32px 18px 32px;
+  width: 285px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  justify-content: center;
+  @media (min-width: @tablet-width) {
+    margin: 47.5px 30px 35px;
+    width: 484px;
+    height: 103px;
+  }
+  @media (min-width: @desktop-width) {
+      margin: 47.5px 150px 35px;
+      width: 484px;
+      height: 103px;
+    }
 
   &__title {
+    margin-bottom: 35px;
+    margin-top: 0;
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
   }
 
   &__description {
+    margin: 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 26px;
