--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,16 +1,53 @@
 .main-nav {
-    text-align: center;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 26px;
-    color: #fff;
+  text-align: center;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  color: #fff;
 
-    &__toggle {
-        background-color: rgba(129, 179, 210, 1);
+  &__toggle {
+    background-color: rgba(129, 179, 210, 1);
+    width: 23px;
+
+    @media (min-width: @tablet-width) {
+        width: 60px;
+      }
+  }
+
+  &__list {
+    background-color: rgba(129, 179, 210, 1);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    @media (min-width: @tablet-width) {
+      width: 570px;
+    }
+    @media (min-width: @desktop-width) {
+        width: 780px;
+      }
     }
 
-    &__list {
-        background-color: rgba(129, 179, 210, 1);
-        list-style-type: none;
+  @media (min-width: @tablet-width) {
+    .main-nav__wrapper {
+      display: flex;
+      justify-content: space-between;
+      width: 768px;
+      margin: 0 auto;
     }
+    .main-nav__toggle {
+      display: none;
+    }
+  }
+}
+@media (min-width: @desktop-width) {
+  .main-nav__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 960px;
+    margin: 0 auto;
+  }
+  .main-nav__toggle {
+    display: none;
+  }
 }
