--- a/source/less/blocks/welcome-anthem.less
+++ b/source/less/blocks/welcome-anthem.less
@@ -7,4 +7,24 @@
     background-size: auto;
     text-align: center;
     padding-top: 90px;
-}
+
+    @media (min-width: @tablet-width) {
+      width: 570px;
+      padding-top: 77px;
+    }
+    @media (min-width: @desktop-width) {
+        width: 768px;
+      }
+
+      &__welcome-logo {
+        @media (min-width: @tablet-width) {
+          width: 460px;
+          height: 350px;
+        }
+        @media (min-width: @desktop-width) {
+            width: 460px;
+            height: 350px;
+          }
+      }
+    }
+
