--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,3 +10,6 @@
 @import "./blocks/catalog-photos.less";
 @import "./blocks/catalog-welcome.less";
 @import "./blocks/site-list.less";
+@import "./global/variables.less";
+@import "./blocks/main-header.less";
+@import "./blocks/form.less";
