--- a/source/less/blocks/common.less
+++ b/source/less/blocks/common.less
@@ -21,11 +21,8 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #000000;
-  background-color: #FFFFFF;
-  width: 320px;
-  margin: 0 auto;
+  background-color: #E7E5E5;
   box-sizing: border-box;
-  align-items: center;
 }
 
 .button {
@@ -38,6 +35,7 @@ body {
   background-color: #82B3D3;
   text-decoration: none;
 }
+
 
 /*.visually-hidden {
       position: absolute;
