--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,20 +1,10 @@
 .intro {
-  margin: 32px 18px 32px;
-  width: 285px;
+  text-align: center;
+  margin: 32px 18px 16px;
   display: flex;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
   justify-content: center;
-  @media (min-width: @tablet-width) {
-    margin: 47.5px 30px 35px;
-    width: 484px;
-    height: 103px;
-  }
-  @media (min-width: @desktop-width) {
-      margin: 47.5px 150px 35px;
-      width: 484px;
-      height: 103px;
-    }
 
   &__title {
     margin-bottom: 35px;
