--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -2,5 +2,11 @@
     &__link {
         text-decoration: none;
         color: #fff;
-    }
+        @media (min-width: @tablet-width) {
+          color: black;
+        }
+        @media (min-width: @desktop-width) {
+          color: black;
+        }
+}
 }
