--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,5 @@
 @import "./blocks/main-nav.less";
-@import "./blocks/main-container.less";
+@import "./blocks/page.less";
 @import "./blocks/advantages.less";
 @import "./blocks/map.less";
 @import "./blocks/footer.less";
