--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,40 +1,27 @@
 .form {
   text-align: center;
   display: grid;
-  &__group {
-    margin: 0px;
 
-    label,
-    input {
-      display: block;
-    }
+&__form-input {
+  width: 280px;
+  height: 58px;
+}
+  input::placeholder {
+    color: black;
+    font-weight: 700px;
+    font-size: 18px;
+    line-height: 26px;
   }
 
-  @media (min-width: @tablet-width) {
-    width: 570px;
-    grid-template-columns: 280px 280px;
-    gap: 16px;
-
-    &__group {
-      margin: 0px;
-
-      label,
-      input {
-        display: block;
-      }
-    }
-
-    &__text-area {
-      grid-column: 1 / -1;
-    }
+  &__filter-list {
+    list-style-type: none;
   }
 
-  &__feedback-submit {
-    grid-column: 1 / -1;
-    justify-self: start;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 768px;
+  &__control {
+    font-weight: 700px;
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: none;
   }
 }
+
