--- a/source/less/blocks/common.less
+++ b/source/less/blocks/common.less
@@ -23,6 +23,7 @@ body {
   color: #000000;
   background-color: #E7E5E5;
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .button {
@@ -37,7 +38,7 @@ body {
 }
 
 
-/*.visually-hidden {
+.visually-hidden {
       position: absolute;
       width: 1px;
       height: 1px;
@@ -47,4 +48,4 @@ body {
       clip: rect(0 0 0 0);
       overflow: hidden;
       display: none;
-    } */
+    }
