--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,11 +1,11 @@
 .form {
   text-align: center;
-  display: grid;
 
-&__form-input {
-  width: 280px;
-  height: 58px;
-}
+  &__form-input {
+    width: 222px;
+    height: 58px;
+  }
+
   input::placeholder {
     color: black;
     font-weight: 700px;
@@ -23,5 +23,15 @@
     line-height: 26px;
     text-transform: none;
   }
-}
 
+  &__control-input {
+    height: 46px;
+    width: 46px;
+  }
+
+  &__text-area {
+    height: 150px;
+    width: 279px;
+
+  }
+}
