--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -11,8 +11,9 @@
     }
   }
 
-  @media (max-width: @mobile-width-only) {
-    width: 767px;
+  @media (min-width: @mobile-width-only) {
+    width: 320px;
+    margin: 0 auto;
   }
 }
 
@@ -20,12 +21,6 @@
   @media (min-width: @tablet-width) {
     &__toggle {
       display: none;
-    }
-
-    @media (min-width: @desktop-width) {
-      &__toggle {
-        display: none;
-      }
     }
   }
 
@@ -40,13 +35,4 @@
   }
 }
 
-.main-nav {
-  &__list {
-    @media (min-width: @desktop-width) {
-      display: flex;
-      justify-content: space-between;
-      margin: 0 auto;
-    }
-  }
-}
 
