--- a/source/less/blocks/catalog-welcome.less
+++ b/source/less/blocks/catalog-welcome.less
@@ -3,8 +3,10 @@
     color: #000000;
     background-color: #FFFFFF;
     background-image: url("../images/index-background.jpg");
+    background-position: 50%;
     background-repeat: no-repeat;
     background-size: auto;
     text-align: center;
     padding-top: 108px;
+    padding-bottom: 118px;
     }
