--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -4,6 +4,7 @@
   &__form-input {
     width: 222px;
     height: 58px;
+    background-color: rgba(242, 242, 242, 1);
   }
 
   input::placeholder {
@@ -18,7 +19,7 @@
   }
 
   &__control {
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 18px;
     line-height: 26px;
     text-transform: none;
@@ -27,11 +28,12 @@
   &__control-input {
     height: 46px;
     width: 46px;
+    background-color: rgba(242, 242, 242, 1);
   }
 
   &__text-area {
     height: 150px;
     width: 279px;
-
+    background-color: rgba(242, 242, 242, 1);
   }
 }
