--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,10 +1,15 @@
 .main-header {
   display: flex;
   flex-direction: column;
+  height: 56px;
+
 
   &__main-logo {
     height: 96px;
     display: flex;
     justify-content: center;
-  }
+}
+&__main-logo-container {
+  z-index: 10;
+}
 }
