--- a/source/less/blocks/welcome-anthem.less
+++ b/source/less/blocks/welcome-anthem.less
@@ -3,8 +3,10 @@
     color: #000000;
     background-image: url("../images/index-background.jpg");
     background-repeat: no-repeat;
+    background-position: 50%;
     background-size: auto;
     text-align: center;
     padding-top: 90px;
+    padding-bottom: 70px;
     }
 
