--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,5 +1,4 @@
-.map {
-  background-image: url("../images/index-map.jpg.jpg");
-  background-repeat: no-repeat;
-  height: 350px;
+.map iframe {
+  display: block;
+  border: none;
 }
