--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,11 +1,72 @@
 .site-list {
-  &__link {
-    text-decoration: none;
-    color: #fff;
-
-    @media (min-width: @tablet-width) {
-      color: black;
-    }
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
   }
+}
+
+.site-list a {
+  display: block;
+  padding: 17px 21px;
+  padding-bottom: 12px;
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: rgba(129, 179, 210, 1);
+  border-top: 1px solid rgba(129, 179, 210, 1);
+  border-bottom: 1px solid rgba(129, 179, 210, 1);
+  box-shadow: 0px 1px 0px rgba(1, 1, 1, 0.2), inset 0px 1px 0px rgba(255, 255, 255, 0.2);
+
+  @media (min-width: @tablet-width) {
+    color: black;
+    background-color: #fff;
+    border: #fff;
+    box-shadow: none;
+    min-width: 58px;
+    padding: 18px 17px;
+  }
+}
+
+.site-list__item {
+  @media (min-width: @tablet-width) {
+   margin-right: 33px;
+
+   &:last-child {
+     margin-right: 0;
+   }
+       &--active {
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 3px;
+        background: #826550;
+      }
+    }
+  }
+ }
+
+.site-list__item a[href] {
+ @media (min-width: @tablet-width) {
+   &:hover {
+     color: rgba(102, 158, 192, 1);
+
+     background-color: #fff;
+   }
+
+   &:active {
+     color: rgba(118, 99, 87, 1);
+
+     background-color: #fff;
+     opacity: 0.3;
+   }
+ }
 }
