--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -24,13 +24,88 @@
     line-height: 21px;
     padding-bottom: 35px;
   }
+
+  &__description-container {
+    @media (min-width: @tablet-width) {
+      padding-top: 12px;
+      padding-left: 33px;
+      padding-right: 33px;
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  &__item {
+    height: 160px;
+    @media (min-width: @tablet-width) {
+    width: 256px;
+    display: flex;
+    }
+    @media (min-width: @desktop-width) {
+      width: 400px;
+    }
+  }
+
+&__item-container {
+  text-align: start;
+  margin-left: 55px;
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    width: 256px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+
+  }
+}
+
+&__greyback-container {
+  @media (min-width: @tablet-width) {
+  display: flex;
+  }
+}
 }
 
 .advantages__item--greyback {
   background-color: rgba(238, 238, 238, 1);
+  @media (min-width: @tablet-width) {
+    width: 256px;
+    height: 256px;
+    display: flex;
+    align-items: flex-start;
+    }
+    @media (min-width: @desktop-width) {
+      width: 400px;
+    }
 }
 
 .advantages__item--blueback {
   color: #ffff;
   background-color: rgba(129, 179, 210, 1);
+  height: 440px;
+  margin-top: 45px;
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    height: 260px;
+}
+}
+
+.logo {
+  position: relative;
+  right: 120px;
+  top: 58px;
+  @media (min-width: @tablet-width) {
+  position: relative;
+  left: 130px;
+  top: 20px;
+  }
+  @media (min-width: @desktop-width) {
+    position: relative;
+    left: 150px;
+    top: 20px;
+  }
+
+
 }
