--- a/source/less/blocks/common.less
+++ b/source/less/blocks/common.less
@@ -31,10 +31,16 @@ body {
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
+  width: 284px;
   text-align: center;
   color: #ffffff;
   background-color: #82B3D3;
   text-decoration: none;
+  padding: 16px 49px 15px 49px ;
+  border: none;
+  @media (min-width: @tablet-width) {
+    width: 458px;
+}
 }
 
 
