--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -3,23 +3,42 @@
   margin-top: 30px;
   padding: 0;
 
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+
+  }
+
   &__hashtag {
     font-weight: 700;
     font-size: 21px;
     line-height: 26px;
+
+    @media (min-width: @tablet-width) {
+      padding-left: 45px;
+      padding-top: 28.5px;
+
+    }
   }
 
   &__social {
     list-style-type: none;
-
+    display: flex;
+    margin-left: 30px;
     @media (min-width: @tablet-width) {
-      display: flex;
-      justify-content: space-between;
+      margin-left: 0;
+
+    }
+
+  }
+
+  &__copyright {
+    @media (min-width: @tablet-width) {
+    padding-right: 45px;
     }
   }
 
-    @media (min-width: @desktop-width) {
-    display: flex;
-    justify-content: space-between;
+  &__item {
+    padding-left: 5px;
   }
 }
