--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,10 +1,39 @@
 .form {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+
+  &__contacts-container {
+    @media (min-width: @tablet-width) {
+      display: flex;
+      justify-content: center;
+    }
+
+  }
+
+  &__title {
+    margin-bottom: 20px;
+  }
+
+  &__group {
+    text-align: start;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__label {
+    text-align: start;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+  }
 
   &__form-input {
-    width: 222px;
+    width: 260px;
     height: 58px;
     background-color: rgba(242, 242, 242, 1);
+    border: none;
   }
 
   input::placeholder {
@@ -16,13 +45,50 @@
 
   &__filter-list {
     list-style-type: none;
+    padding: 0;
+    @media (min-width: @tablet-width) {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
   }
 
   &__control {
+    display: flex;
+    flex-direction: column;
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
     text-transform: none;
+
+    @media (min-width: @tablet-width) {
+      width: 231px;
+    }
+  }
+
+  &__control-sights {
+    display: flex;
+    flex-direction: column;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: none;
+
+    @media (min-width: @tablet-width) {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+    }
+  }
+
+  &__sights-container-left  {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__sights-container-right  {
+    display: flex;
+    flex-direction: column;
   }
 
   &__control-input {
@@ -31,9 +97,17 @@
     background-color: rgba(242, 242, 242, 1);
   }
 
+
   &__text-area {
     height: 150px;
     width: 279px;
     background-color: rgba(242, 242, 242, 1);
+
+    @media (min-width: @tablet-width) {
+      width: 648px;
+    }
+  @media (min-width: @desktop-width) {
+    width: 768px;
+  }
   }
 }
