--- a/source/less/blocks/outro.less
+++ b/source/less/blocks/outro.less
@@ -1,16 +1,39 @@
 .outro {
   text-align: center;
+  margin-left: 10px;
   margin-bottom: 30px;
+  margin-top: 38px;
+  width: 284px;
+
+  @media (min-width: @tablet-width) {
+    width: 500px;
+    margin-left: 167px;
+    }
+    @media (min-width: @desktop-width) {
+      width: 500px;
+      margin-left: 350px;
+    }
 
   &__title {
     font-weight: 700;
-    font-size: 18px;
+    font-size: 21px;
     line-height: 26px;
+    @media (min-width: @tablet-width) {
+      font-size: 30px;
+      line-height: 26px;
+      }
   }
 
   &__description {
     font-weight: 400;
-    font-size: 18px;
-    line-height: 26px;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 32px;
+    @media (min-width: @tablet-width) {
+      font-size: 18px;
+      line-height: 26px;
+      padding-top: 20px;
+      }
   }
-}
+  }
+
