--- a/6/css/style.css
+++ b/6/css/style.css
@@ -164,12 +164,95 @@
   line-height: 21px;
   padding-bottom: 35px;
 }
+@media (min-width: 768px) {
+  .advantages__description-container {
+    padding-top: 12px;
+    padding-left: 33px;
+    padding-right: 33px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+.advantages__item {
+  height: 160px;
+}
+@media (min-width: 768px) {
+  .advantages__item {
+    width: 256px;
+    display: flex;
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__item {
+    width: 400px;
+  }
+}
+.advantages__item-container {
+  text-align: start;
+  margin-left: 55px;
+}
+@media (min-width: 768px) {
+  .advantages__item-container {
+    margin: 0;
+    width: 256px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+  }
+}
+@media (min-width: 768px) {
+  .advantages__greyback-container {
+    display: flex;
+  }
+}
 .advantages__item--greyback {
   background-color: #eeeeee;
+}
+@media (min-width: 768px) {
+  .advantages__item--greyback {
+    width: 256px;
+    height: 256px;
+    display: flex;
+    align-items: flex-start;
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__item--greyback {
+    width: 400px;
+  }
 }
 .advantages__item--blueback {
   color: #ffff;
   background-color: #81b3d2;
+  height: 440px;
+  margin-top: 45px;
+}
+@media (min-width: 768px) {
+  .advantages__item--blueback {
+    width: 100%;
+    height: 260px;
+  }
+}
+.logo {
+  position: relative;
+  right: 120px;
+  top: 58px;
+}
+@media (min-width: 768px) {
+  .logo {
+    position: relative;
+    left: 130px;
+    top: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .logo {
+    position: relative;
+    left: 150px;
+    top: 20px;
+  }
 }
 .map iframe {
   display: block;
@@ -180,25 +263,40 @@
   margin-top: 30px;
   padding: 0;
 }
+@media (min-width: 768px) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+  }
+}
 .footer__hashtag {
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
 }
+@media (min-width: 768px) {
+  .footer__hashtag {
+    padding-left: 45px;
+    padding-top: 28.5px;
+  }
+}
 .footer__social {
   list-style-type: none;
+  display: flex;
+  margin-left: 30px;
 }
 @media (min-width: 768px) {
   .footer__social {
-    display: flex;
-    justify-content: space-between;
+    margin-left: 0;
   }
 }
-@media (min-width: 1200px) {
-  .footer {
-    display: flex;
-    justify-content: space-between;
+@media (min-width: 768px) {
+  .footer__copyright {
+    padding-right: 45px;
   }
+}
+.footer__item {
+  padding-left: 5px;
 }
 .welcome-anthem {
   height: 300px;
@@ -213,11 +311,23 @@
 }
 .intro {
   text-align: center;
-  margin: 32px 18px 16px;
+  margin: 32px 0px 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+@media (min-width: 768px) {
+  .intro {
+    width: 500px;
+    margin-left: 124px;
+  }
+}
+@media (min-width: 1200px) {
+  .intro {
+    width: 484px;
+    margin-left: 357px;
+  }
 }
 .intro__title {
   margin-bottom: 35px;
@@ -262,10 +372,18 @@ body {
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
+  width: 284px;
   text-align: center;
   color: #ffffff;
   background-color: #82B3D3;
   text-decoration: none;
+  padding: 16px 49px 15px 49px ;
+  border: none;
+}
+@media (min-width: 768px) {
+  .button {
+    width: 458px;
+  }
 }
 .visually-hidden {
   position: absolute;
@@ -280,22 +398,65 @@ body {
 }
 .outro {
   text-align: center;
+  margin-left: 10px;
   margin-bottom: 30px;
+  margin-top: 38px;
+  width: 284px;
+}
+@media (min-width: 768px) {
+  .outro {
+    width: 500px;
+    margin-left: 167px;
+  }
+}
+@media (min-width: 1200px) {
+  .outro {
+    width: 500px;
+    margin-left: 350px;
+  }
 }
 .outro__title {
   font-weight: 700;
-  font-size: 18px;
+  font-size: 21px;
   line-height: 26px;
+}
+@media (min-width: 768px) {
+  .outro__title {
+    font-size: 30px;
+    line-height: 26px;
+  }
 }
 .outro__description {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 32px;
+}
+@media (min-width: 768px) {
+  .outro__description {
+    font-size: 18px;
+    line-height: 26px;
+    padding-top: 20px;
+  }
 }
 .catalog-photos {
   text-align: center;
+  display: flex;
+  justify-content: center;
+}
+@media (min-width: 768px) {
+  .catalog-photos {
+    margin-left: 100px;
+  }
+}
+@media (min-width: 1200px) {
+  .catalog-photos {
+    margin-left: 200px;
+  }
 }
 .catalog-photos__list {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 @media (min-width: 768px) {
@@ -368,15 +529,19 @@ body {
     border: #fff;
     box-shadow: none;
     min-width: 58px;
-    padding: 18px 17px;
+    padding: 18px 0 17px;
+    font-size: 14px;
+    line-height: 21px;
   }
 }
 @media (min-width: 768px) {
-  .site-list__item {
-    margin-right: 33px;
+  .site-list__item:first-child {
+    margin-right: 0px;
+    margin-left: 40px;
   }
   .site-list__item:last-child {
-    margin-right: 0;
+    margin-right: 27px;
+    margin-left: 0;
   }
   .site-list__item--active {
     position: relative;
@@ -402,6 +567,11 @@ body {
     opacity: 0.3;
   }
 }
+@media (min-width: 768px) {
+  .site-list li:nth-child(3) {
+    margin-left: 150px;
+  }
+}
 .main-header {
   display: flex;
   flex-direction: column;
@@ -417,11 +587,35 @@ body {
 }
 .form {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .form__contacts-container {
+    display: flex;
+    justify-content: center;
+  }
+}
+.form__title {
+  margin-bottom: 20px;
+}
+.form__group {
+  text-align: start;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.form__label {
+  text-align: start;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
 }
 .form__form-input {
-  width: 222px;
+  width: 260px;
   height: 58px;
   background-color: #f2f2f2;
+  border: none;
 }
 .form input::placeholder {
   color: black;
@@ -431,12 +625,50 @@ body {
 }
 .form__filter-list {
   list-style-type: none;
+  padding: 0;
+}
+@media (min-width: 768px) {
+  .form__filter-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 .form__control {
+  display: flex;
+  flex-direction: column;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
   text-transform: none;
+}
+@media (min-width: 768px) {
+  .form__control {
+    width: 231px;
+  }
+}
+.form__control-sights {
+  display: flex;
+  flex-direction: column;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: none;
+}
+@media (min-width: 768px) {
+  .form__control-sights {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+.form__sights-container-left {
+  display: flex;
+  flex-direction: column;
+}
+.form__sights-container-right {
+  display: flex;
+  flex-direction: column;
 }
 .form__control-input {
   height: 46px;
@@ -447,5 +679,15 @@ body {
   height: 150px;
   width: 279px;
   background-color: #f2f2f2;
+}
+@media (min-width: 768px) {
+  .form__text-area {
+    width: 648px;
+  }
+}
+@media (min-width: 1200px) {
+  .form__text-area {
+    width: 768px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
