--- a/source/less/blocks/catalog-welcome.less
+++ b/source/less/blocks/catalog-welcome.less
@@ -9,4 +9,9 @@
     text-align: center;
     padding-top: 108px;
     padding-bottom: 118px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../images/index-background-2dppx.jpg");
+      background-size: 1338px auto;
+      }
     }
