--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -8,13 +8,13 @@
 
   @media (min-width: @tablet-width) {
     width: 500px;
-    margin-left: 124px;
+    padding-top: 47.5px;
+    margin: 0 auto;
   }
   @media (min-width: @desktop-width) {
     width: 484px;
-    margin-left: 357px;
+    margin: 0 auto;
   }
-
 
   &__title {
     margin-bottom: 35px;
