--- a/source/less/blocks/welcome-anthem.less
+++ b/source/less/blocks/welcome-anthem.less
@@ -8,5 +8,19 @@
     text-align: center;
     padding-top: 90px;
     padding-bottom: 70px;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 50px;
+      padding-bottom: 130px;
+
+    }
+
+
+    @media (min-resolution: 2dppx) {
+    background-image: url("../images/index-background-2dppx.jpg");
+    background-size: 1338px auto;
+    }
+
+
     }
 
