--- a/source/less/blocks/catalog-photos.less
+++ b/source/less/blocks/catalog-photos.less
@@ -2,47 +2,191 @@
   text-align: center;
   display: flex;
   justify-content: center;
-  @media (min-width: @tablet-width) {
-    margin-left: 100px;
-  }
-  @media (min-width: @desktop-width) {
-    margin-left: 200px;
-    }
+  margin-top: 50px;
 
+  @media (min-width: @tablet-width) {
+    padding-right: 30px;
+    padding-left: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+    margin: 0;
+  }
+
+  &__photos-photo {
+    @media (min-width: @desktop-width) {
+      position: relative;
+      top: 81px;
+    }
+  }
 
   &__list {
     margin: 0;
     padding: 0;
     list-style-type: none;
+
     @media (min-width: @tablet-width) {
       display: flex;
       flex-wrap: wrap;
+      justify-content: flex-start;
     }
+
     @media (min-width: @desktop-width) {
       display: flex;
       flex-wrap: wrap;
-      }
+    }
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+
+    @media (min-width: @tablet-width) {
+      background-color: rgba(242, 242, 242, 1);
+    }
+
+    @media (min-width: @desktop-width) {
+      background-color: #fff;
+      height: 400px;
+    }
+  }
+
+  &__container {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    @media (min-width: @tablet-width) {
+      display: flex;
+      flex-direction: row;
+    }
+    @media (min-width: @desktop-width) {
+      z-index: 10;
+      background: #000000;
+      opacity: 0.7;
+    }
+  }
+
+  &__container-small {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    @media (min-width: @tablet-width) {
+      display: flex;
+      flex-direction: row;
+    }
+    @media (min-width: @desktop-width) {
+      z-index: 10;
+      background: #000000;
+      opacity: 0.7;
+    }
+  }
+
+  &__description-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    @media (min-width: @tablet-width) {
+      padding-right: 400px;
+      padding-left: 20px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-right: 950px;
+      padding-left: 20px;
+    }
+
+  }
+
+  &__description-container-small {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    @media (min-width: @tablet-width) {
+      padding-left: 20px;
+      padding-right: 50px;
+    }
+    @media (min-width: @desktop-width) {
+      padding-right: 110px;
+    }
+
   }
 
   &__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
-  }
 
-  &__likes-amount {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 21px;
+    @media (min-width: @tablet-width) {
+      margin: 0;
+      padding-top: 10px;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 26px;
+    }
+    @media (min-width: @desktop-width) {
+      color: #fff;
+    }
   }
 
   &__author {
     text-transform: none;
+
+    @media (min-width: @tablet-width) {
+      margin: 0;
+      padding-bottom: 15px;
+    }
+
+    @media (min-width: @desktop-width) {
+      color: #fff;
+    }
   }
+
+  &__like-small {
+    @media (min-width: @tablet-width) {
+      padding-left: 60px;
+    }
+  }
+}
+
+.like-button__counter {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+
+  @media (min-width: @desktop-width) {
+    color: #fff;
+  }
+
+}
+
+.like-button__icon {
+  padding-top: 20px;
+
+  @media (min-width: @desktop-width) {
+    z-index: 20;
+    color: #fff;
+  }
+}
+
+.super-gray {
+  @media (min-width: @tablet-width) {
+    background-color: rgba(234, 234, 234, 1);
+  }
+  @media (min-width: @desktop-width) {
+    background-color: #fff;
+  }
+}
+
+.like-button {
+  padding-bottom: 20px;
 }
