--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -33,6 +33,9 @@
   }
 
   &__copyright {
+    @media (min-width: @mobile-width) {
+      padding-bottom: 10px;
+      }
     @media (min-width: @tablet-width) {
     padding-right: 45px;
     }
