--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -2,24 +2,47 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  @media (min-width: @tablet-width) {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
 
-  &__contacts-container {
+  &__group {
+    margin: 0;
+    @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
+  }
+
+  &__group--container {
+    @media (min-width: @tablet-width) {
+    display: flex;
+    }
+  }
+
+  &__group--small {
+    @media (min-width: @tablet-width) {
+    width: 50%;
+  }
+}
+
+  &__group--small-checkbox{
+    @media (min-width: @tablet-width) {
+      width: 50%;
+  }
+}
+
+  &__group--container-checkbox {
     @media (min-width: @tablet-width) {
       display: flex;
-      justify-content: center;
+      padding-left: 50px;
     }
-
   }
 
   &__title {
     margin-bottom: 20px;
-  }
-
-  &__group {
-    text-align: start;
-    margin-left: 20px;
-    display: flex;
-    flex-direction: column;
+    text-align: center;
   }
 
   &__label {
@@ -34,6 +57,10 @@
     height: 58px;
     background-color: rgba(242, 242, 242, 1);
     border: none;
+    @media (min-width: @desktop-width) {
+      width: 430px;
+
+    }
   }
 
   input::placeholder {
@@ -44,70 +71,151 @@
   }
 
   &__filter-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     list-style-type: none;
-    padding: 0;
+    padding-left: 15px;
+
     @media (min-width: @tablet-width) {
       display: flex;
-      justify-content: center;
       flex-wrap: wrap;
+      flex-direction: row;
+      align-content: stretch;
+      padding-left: 30px;
     }
+    @media (min-width: @desktop-width) {
+      justify-content: space-between;
+      padding: 0;
+
+    }
+
+  }
+
+  &__filter-item {
+    @media (min-width: @tablet-width) {
+      padding-left: 40px;
+  }
   }
 
   &__control {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    padding-bottom: 16px;
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
     text-transform: none;
-
-    @media (min-width: @tablet-width) {
-      width: 231px;
-    }
   }
 
   &__control-sights {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
     text-transform: none;
+    padding: 16px;
 
-    @media (min-width: @tablet-width) {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-    }
-  }
-
-  &__sights-container-left  {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__sights-container-right  {
-    display: flex;
-    flex-direction: column;
   }
 
   &__control-input {
-    height: 46px;
-    width: 46px;
-    background-color: rgba(242, 242, 242, 1);
+    display: none;
   }
 
+  &__radio-fake {
+    height: 46px;
+    width: 46px;
+    margin-right: 16px;
+    display: inline-block;
+    position: relative;
+    background-color: rgba(242, 242, 242, 1);
+    border-radius: 50%;
+  }
+
+  .form__radio-fake::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 16px;
+    height: 16px;
+    background-color: #000;
+    border-radius: 50%;
+    opacity: 0;
+    transition: .2s;
+  }
+
+  .form__control-input:checked +.form__radio-fake::before {
+    opacity: 1;
+  }
+
+  &__checkbox {
+    border: none;
+  }
+
+  &__checkbox-fake {
+    height: 46px;
+    width: 46px;
+    display: inline-block;
+    position: relative;
+    background-color: rgba(242, 242, 242, 1);
+    margin-right: 16px;
+  }
+
+  .form__checkbox-fake::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 16px;
+    height: 16px;
+    background-color: #000;
+    border-radius: 50%;
+    opacity: 0;
+    transition: .2s;
+  }
+
+  .form__control-input:checked +.form__checkbox-fake::before {
+    opacity: 1;
+  }
 
   &__text-area {
     height: 150px;
     width: 279px;
     background-color: rgba(242, 242, 242, 1);
+    margin-bottom: 50px;
 
     @media (min-width: @tablet-width) {
-      width: 648px;
+      width: 100%;
     }
-  @media (min-width: @desktop-width) {
-    width: 768px;
+
+    @media (min-width: @desktop-width) {
+      width: 80%;
+    }
   }
+  &__text-area-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media (min-width: @tablet-width) {
+    align-items: flex-start;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-left: 150px;
+
+    }
+  }
+
+  &__mandatory {
+    display: flex;
+    flex-direction: row-reverse;
+    padding-right: 18px;
   }
 }
