--- a/source/less/blocks/outro.less
+++ b/source/less/blocks/outro.less
@@ -1,26 +1,27 @@
 .outro {
   text-align: center;
-  margin-left: 10px;
-  margin-bottom: 30px;
-  margin-top: 38px;
-  width: 284px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  @media (min-width: @tablet-width) {
-    width: 500px;
-    margin-left: 167px;
-    }
-    @media (min-width: @desktop-width) {
-      width: 500px;
-      margin-left: 350px;
-    }
+  @media (min-width: @desktop-width) {
+    padding: 0;
+    margin: 0;
+  }
 
   &__title {
+    margin-top: 58px;
     font-weight: 700;
     font-size: 21px;
     line-height: 26px;
     @media (min-width: @tablet-width) {
       font-size: 30px;
       line-height: 26px;
+      }
+
+      @media (min-width: @desktop-width) {
+        padding: 0;
+        margin: 0;
       }
   }
 
@@ -29,11 +30,18 @@
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 32px;
+    padding: 0px 20px 0px 20px;
     @media (min-width: @tablet-width) {
       font-size: 18px;
       line-height: 26px;
-      padding-top: 20px;
+      padding: 20px 90px 20px 90px;
       }
   }
-  }
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+    line-height: 26px;
+    padding: 20px 220px 20px 220px;
+    }
+}
+
 
