--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -17,7 +17,7 @@
     margin-top: 0;
     padding-top: 25px;
     @media (min-width: @tablet-width) {
-      padding-top: 45px;
+      font-size: 21px;
     }
   }
 
@@ -27,26 +27,19 @@
     line-height: 21px;
     padding-bottom: 15px;
     margin: 0 auto;
+    @media (min-width: @tablet-width) {
+      font-size: 16px;
+
+    }
   }
 
   &__description-container {
     @media (min-width: @tablet-width) {
       padding-top: 12px;
-      padding-left: 33px;
-      padding-right: 33px;
+      padding-left: 35px;
+      padding-right: 35px;
       display: flex;
       flex-direction: column;
-    }
-  }
-
-  &__item {
-    height: 160px;
-    @media (min-width: @tablet-width) {
-    width: 256px;
-    display: flex;
-    }
-    @media (min-width: @desktop-width) {
-      width: 400px;
     }
   }
 
@@ -59,7 +52,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
 
   }
 }
@@ -75,25 +67,24 @@
 .advantages__item--greyback {
   background-color: rgba(238, 238, 238, 1);
   @media (min-width: @tablet-width) {
-    height: 256px;
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding: 0 40px 50px 40px;
 
     }
     @media (min-width: @desktop-width) {
-      width: 400px;
+      width: 100%;
     }
 }
 
 .advantages__item--blueback {
   color: #ffff;
   background-color: rgba(129, 179, 210, 1);
-  height: 425px;
   margin-top: 45px;
   @media (min-width: @tablet-width) {
+    display: flex;
     width: 100%;
-    height: 260px;
 }
 }
 
@@ -102,13 +93,15 @@
   right: 125px;
   top: 58px;
   @media (min-width: @tablet-width) {
+  width: 79px;
+  height: 72px;
   position: relative;
-  left: 130px;
+  left: 0px;
   top: 5px;
+  padding-top: 60px;
   }
   @media (min-width: @desktop-width) {
     position: relative;
-    left: 200px;
     top: 10px;
   }
 
