--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -7,12 +7,11 @@
   justify-content: center;
 
   @media (min-width: @tablet-width) {
-    width: 500px;
-    padding-top: 47.5px;
+    padding: 47.5px 124px 0 124px;
     margin: 0 auto;
   }
   @media (min-width: @desktop-width) {
-    width: 484px;
+    padding: 47.5px 357px 0 357px;
     margin: 0 auto;
   }
 
@@ -22,6 +21,9 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
+    @media (min-width: @tablet-width) {
+      font-size: 21px;
+    }
   }
 
   &__description {
