--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,3 +13,5 @@
 @import "./global/variables.less";
 @import "./blocks/main-header.less";
 @import "./blocks/form.less";
+@import "./blocks/main.less";
+@import "./blocks/modal.less";
