--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -4,14 +4,17 @@
 
     @media (min-width: @mobile-width) {
       width: 320px;
+      margin: 0 auto;
     }
 
     @media (min-width: @tablet-width) {
       width: 768px;
+      margin: 0 auto;
     }
 
     @media (min-width: @desktop-width) {
       width: 1200px;
+      margin: 0 auto;
     }
   }
 
