--- a/source/less/blocks/outro.less
+++ b/source/less/blocks/outro.less
@@ -10,11 +10,12 @@
   }
 
   &__title {
-    margin-top: 58px;
+    margin-top: 28px;
     font-weight: 700;
     font-size: 21px;
     line-height: 26px;
     @media (min-width: @tablet-width) {
+      margin-top: 48px;
       font-size: 30px;
       line-height: 26px;
       }
@@ -45,3 +46,9 @@
 }
 
 
+.button--outro {
+  @media (min-width: @desktop-width) {
+    width: 458px;
+
+}
+}
