--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,3 +15,4 @@
 @import "./blocks/form.less";
 @import "./blocks/main.less";
 @import "./blocks/modal.less";
+@import "./blocks/like-button.less";
