--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -21,7 +21,7 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
-    margin-top: 0;
+    margin: 0;
     padding-top: 25px;
     @media (min-width: @tablet-width) {
       font-size: 21px;
@@ -32,11 +32,11 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
+    padding-top: 10px;
     padding-bottom: 15px;
     margin: 0 auto;
     @media (min-width: @tablet-width) {
       font-size: 16px;
-
     }
   }
 
@@ -86,18 +86,23 @@
 }
 
 .advantages__item--blueback {
+  @media (min-width: @mobile-width) {
+  display: flex;
+  flex-wrap: wrap;
+}
   color: #ffff;
   background-color: rgba(129, 179, 210, 1);
-  margin-top: 45px;
+  margin-top: 30px;
   @media (min-width: @tablet-width) {
+    flex-wrap: nowrap;
     display: flex;
     width: 100%;
 }
 }
 
-.logo {
+.advantages__logo {
   position: relative;
-  right: 125px;
+  right: 130px;
   top: 58px;
   @media (min-width: @tablet-width) {
   width: 79px;
