--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -11,7 +11,7 @@
     margin: 0 auto;
   }
   @media (min-width: @desktop-width) {
-    padding: 47.5px 357px 0 357px;
+    padding: 47.5px 357px 0px 357px;
     margin: 0 auto;
   }
 
