--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,19 +1,27 @@
 .modal {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+
   &__container {
-    z-index: 150;
-    text-align: center;
+    width: 320px;
+    max-width: 100%;
+    max-height: 100%;
     position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    @media (min-width: @desktop-width) {
+      width: 640px;
+
+    }
   }
 &__content {
-  margin-top: 116px;
-  margin-right:140px;
-  margin-left:140px;
   background-color: rgba(255, 255, 255, 1);
   display: flex;
   align-items: center;
@@ -22,14 +30,20 @@
 }
 
 &__title {
-  padding-top: 45px;
+  margin: 0;
+  text-align: center;
+  padding-top: 50px;
+  padding-left: 75px;
+  padding-right: 75px;
   font-size: 21px;
   line-height: 26px;
 }
 
 &__text {
+  text-align: center;
   padding-right: 42px;
   padding-left: 41px;
+  padding-bottom: 25px;
   font-size: 15px;
   line-height: 21px;
 }
@@ -39,6 +53,65 @@
 }
 }
 
-.modal__container--closed {
+.modal--closed {
+  display: none;
+}
+
+.modal-feedback {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+
+  &__container {
+    width: 320px;
+    max-width: 100%;
+    max-height: 100%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    @media (min-width: @desktop-width) {
+      width: 640px;
+
+    }
+  }
+&__content {
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+&__title {
+  margin: 0;
+  text-align: center;
+  padding-top: 50px;
+  padding-left: 35px;
+  padding-right: 35px;
+  font-size: 21px;
+  line-height: 26px;
+}
+
+&__text {
+  text-align: center;
+  padding-right: 42px;
+  padding-left: 41px;
+  padding-bottom: 25px;
+  font-size: 15px;
+  line-height: 21px;
+}
+
+&__button {
+  margin-bottom: 35px;
+}
+}
+
+.modal-feedback--closed {
   display: none;
 }
