--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -62,6 +62,10 @@
  }
 
 .site-list__item a[href] {
+  &:active {
+    background-color: rgba(102, 158, 192, 1);
+    opacity: 0.7;
+  }
  @media (min-width: @tablet-width) {
    &:hover {
      color: rgba(102, 158, 192, 1);
