--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,6 +1,7 @@
 .advantages {
   text-align: center;
   overflow: hidden;
+  position: relative;
 
   &__photo {
     height: 100%;
@@ -22,7 +23,7 @@
     font-size: 18px;
     line-height: 26px;
     margin: 0;
-    padding-top: 25px;
+    padding-top: 35px;
     @media (min-width: @tablet-width) {
       font-size: 21px;
     }
@@ -116,6 +117,18 @@
     position: relative;
     top: 10px;
   }
+}
 
+.advantages::before {
+  content: "";
+  position: absolute;
+  display: block;
+  background-image: url("../images/triangle-reverse-decorate.svg");
+  width: 100%;
+  height: 37px;
+  top: 12px;
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 
 }
