--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -2,6 +2,7 @@
   text-align: center;
   overflow: hidden;
   position: relative;
+  margin-top: 20px;
 
   &__photo {
     height: 100%;
@@ -44,7 +45,7 @@
     font-size: 14px;
     line-height: 21px;
     padding-top: 10px;
-    padding-bottom: 15px;
+    padding-bottom: 25px;
     margin: 0 auto;
 
     @media (min-width: @tablet-width) {
@@ -55,8 +56,8 @@
   &__description-container {
     @media (min-width: @tablet-width) {
       padding-top: 12px;
-      padding-left: 35px;
-      padding-right: 35px;
+      padding-left: 25px;
+      padding-right: 25px;
       display: flex;
       flex-direction: column;
     }
@@ -91,7 +92,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 0 40px 50px 40px;
+    padding: 0 65px 50px 40px;
 
   }
 
