--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -6,13 +6,9 @@
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: space-between;
-    margin-top: 50px;
-    padding-bottom: 36px;
+    margin-top: 30px;
+    padding-bottom: 5px;
   }
-
-  @media (min-width: @desktop-width) {
-    margin-top: 80px;
-    }
 
   &__hashtag {
     font-weight: 700;
@@ -32,7 +28,7 @@
     display: flex;
     margin-left: 30px;
     @media (min-width: @tablet-width) {
-      margin-left: 0;
+      margin-left: -35px;
 
     }
 
