--- a/source/less/blocks/outro.less
+++ b/source/less/blocks/outro.less
@@ -21,7 +21,7 @@
       }
 
       @media (min-width: @desktop-width) {
-        padding: 0;
+        padding: 20px 0 0 0;
         margin: 0;
       }
   }
@@ -44,11 +44,15 @@
     padding: 20px 220px 20px 220px;
     }
 
+    &__video {
+      margin-top: 20px;
+    }
+
     &__play {
       fill: #fff;
       opacity: 0.7;
       position: absolute;
-      top: 2540px;
+      top: 2440px;
       width: 48px;
       height: 54px;
       cursor: pointer;
