--- a/source/less/blocks/welcome-anthem.less
+++ b/source/less/blocks/welcome-anthem.less
@@ -8,6 +8,7 @@
   text-align: center;
   padding-top: 90px;
   padding-bottom: 70px;
+  padding-left: 15px;
   position: relative;
 
   @media (min-width: @tablet-width) {
@@ -33,6 +34,7 @@
   width: 100%;
   height: 56px;
   top: 404px;
+  left: 0;
 
   @media (min-width: @tablet-width) {
     top: 424px;
