--- a/source/less/blocks/catalog-photos.less
+++ b/source/less/blocks/catalog-photos.less
@@ -124,6 +124,22 @@
 
   }
 
+  &__description-container::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 1px;
+    left: 0px;
+    top: 1320px;
+    background: #E5E5E5;
+    mix-blend-mode: normal;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
+
   &__title {
     margin: 0;
     padding-top: 15px;
@@ -142,6 +158,23 @@
     @media (min-width: @desktop-width) {
       color: #fff;
     }
+  }
+
+  &__title::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 1px;
+    left: 0px;
+    top: 1740px;
+    background: #E5E5E5;
+    mix-blend-mode: normal;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+
   }
 
   &__author {
@@ -182,9 +215,10 @@
   width: 100%;
   height: 1px;
   left: 0px;
-  top: 2280px;
+  top: 2180px;
   background: #E5E5E5;
   mix-blend-mode: normal;
+
   @media (min-width: @tablet-width) {
     display: none;
   }
