--- a/source/less/blocks/catalog-welcome.less
+++ b/source/less/blocks/catalog-welcome.less
@@ -1,5 +1,4 @@
 .catalog-welcome {
-    height: 106px;
     color: #000000;
     background-color: #FFFFFF;
     background-image: url("../images/index-background.jpg");
@@ -10,6 +9,13 @@
     padding-top: 108px;
     padding-bottom: 118px;
     position: relative;
+
+    @media (min-width: @mobile-width) {
+      height: 1px;
+    }
+    @media (min-width: @tablet-width) {
+      height: 100px;
+    }
 
     @media (min-resolution: 2dppx) {
       background-image: url("../images/index-background-2dppx.jpg");
@@ -25,5 +31,8 @@
       background-image: url("../images/triangle-decorate.svg");
       width: 100%;
       height: 56px;
-      top: 277px;
+      top: 171px;
+      @media (min-width: @tablet-width) {
+        top: 270px;
+      }
     }
