--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -38,6 +38,7 @@
   }
 
   &__group {
+    position:relative ;
     margin: 0;
 
     @media (min-width: @tablet-width) {
@@ -46,13 +47,70 @@
     }
   }
 
-  &__group-container {
+  &__group::before {
     @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 15%;
+      height: 1px;
+      left: 600px;
+      top: 30px;
+      background: #E5E5E5;
+      mix-blend-mode: normal;
+      }
+      @media (min-width: @desktop-width) {
+        width: 25%;
+        left: 800px;
+      }
+
+  }
+
+  &__group::after {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 15%;
+      height: 1px;
+      left: 80px;
+      top: 30px;
+      background: #E5E5E5;
+      mix-blend-mode: normal;
+      }
+      @media (min-width: @desktop-width) {
+        width: 25%;
+        left: 100px;
+      }
+  }
+
+  &__group-container {
+    position: relative;
+    @media (min-width: @tablet-width) {
+      margin-top: 90px;
       display: flex;
     }
   }
 
+  &__group-container::after {
+    @media (min-width: @tablet-width) {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0.1%;
+    height: 380px;
+    left: 400px;
+    top: 20px;
+    background: #E5E5E5;
+    mix-blend-mode: normal;
+    }
+    @media (min-width: @desktop-width) {
+      left: 615px;
+    }
+  }
+
   &__group-small {
+    padding-bottom: 10px;
     @media (min-width: @tablet-width) {
       width: 50%;
       display: flex;
@@ -86,7 +144,24 @@
   &__title {
     margin-bottom: 20px;
     text-align: center;
+    position: relative;
   }
+
+  &__title::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 1px;
+    left: 0px;
+    top: -15px;
+    background: #E5E5E5;
+    mix-blend-mode: normal;
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
+
 
   &__label {
     text-align: start;
@@ -109,10 +184,11 @@
   }
 
   input::placeholder {
-    color: black;
+    color: rgba(0, 0, 0, 1);
     font-weight: 700px;
     font-size: 18px;
     line-height: 26px;
+    padding-left: 10px;
   }
 
   &__filter-list {
@@ -201,7 +277,45 @@
   }
 
   &__checkbox {
+    position: relative;
     border: none;
+  }
+
+  &__checkbox::before {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 15%;
+      height: 1px;
+      left: 600px;
+      top: 30px;
+      background: #E5E5E5;
+      mix-blend-mode: normal;
+      }
+      @media (min-width: @desktop-width) {
+        width: 25%;
+        left: 800px;
+      }
+  }
+
+  &__checkbox::after {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 15%;
+      height: 1px;
+      left: 60px;
+      top: 30px;
+      background: #E5E5E5;
+      mix-blend-mode: normal;
+      }
+      @media (min-width: @desktop-width) {
+        width: 25%;
+        left: 100px;
+      }
+
   }
 
   &__checkbox-fake {
@@ -248,6 +362,7 @@
   }
 
   &__text-area-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -262,6 +377,44 @@
       padding-left: 120px;
       padding-right: 120px;
     }
+  }
+
+  &__text-area-container::before {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 15%;
+      height: 1px;
+      left: 600px;
+      top: 30px;
+      background: #E5E5E5;
+      mix-blend-mode: normal;
+      }
+      @media (min-width: @desktop-width) {
+        width: 25%;
+        left: 800px;
+      }
+
+  }
+
+  &__text-area-container::after {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 15%;
+      height: 1px;
+      left: 60px;
+      top: 30px;
+      background: #E5E5E5;
+      mix-blend-mode: normal;
+      }
+      @media (min-width: @desktop-width) {
+        width: 25%;
+        left: 100px;
+      }
+
   }
 
   &__text-area {
@@ -289,7 +442,11 @@
   &__mandatory {
     display: flex;
     flex-direction: row-reverse;
-    padding-right: 33px;
+    padding-right: 15px;
+
+    @media (min-width: @tablet-width) {
+      padding-right: 35px;
+    }
   }
 
   @media (min-width: @tablet-width) {
@@ -297,23 +454,14 @@
   }
 
   &__button {
+    width: 90%;
+    @media (min-width: @tablet-width) {
+      width: 45%;
+    }
     @media (min-width: @desktop-width) {
       width: 458px;
     }
   }
 }
 
-.form__group-container::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 1px;
-  left: 0px;
-  top: 1193px;
-  background: #E5E5E5;
-  mix-blend-mode: normal;
-  @media (min-width: @tablet-width) {
-    display: none;
-  }
-}
+
