--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -21,6 +21,7 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
+    padding: 0 32px 0 32px;
     @media (min-width: @tablet-width) {
       font-size: 21px;
     }
@@ -32,4 +33,20 @@
     font-size: 14px;
     line-height: 21px;
   }
+}
+
+.catalog-intro:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1px;
+  left: 0px;
+  top: 460px;
+  background: #E5E5E5;
+  mix-blend-mode: normal;
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+
 }
