--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -21,8 +21,9 @@
 
     &:hover,
     &:active {
-      background-color:  #fff;
+      background-color: #ffff;
     }
+
   }
 
   &__list {
@@ -58,6 +59,7 @@
   height: 4px;
   background-color: rgba(129, 179, 210, 1);
   box-shadow: 0 8px 0 0 rgba(129, 179, 210, 1), 0 16px 0 0 rgba(129, 179, 210, 1);
+
   }
 
 @media (max-width: @mobile-width-only) {
@@ -83,8 +85,8 @@
     content: "";
     position: absolute;
     top: 20px;
-    left: 10px;
-    width: 30px;
+    left: 13px;
+    width: 25px;
     height: 2px;
     background-color: #ffffff;
   }
@@ -92,10 +94,12 @@
   &::before {
     transform: rotate(45deg);
     box-shadow: none;
+    height: 4px;
   }
 
   &::after {
     transform: rotate(-45deg);
+    height: 4px;
   }
 
   &:active::before,
