--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -172,6 +172,9 @@
   }
 
   &__form-input {
+    font-weight: 700px;
+    font-size: 18px;
+    line-height: 26px;
     width: 260px;
     height: 58px;
     background-color: rgba(242, 242, 242, 1);
@@ -185,9 +188,6 @@
 
   input::placeholder {
     color: rgba(0, 0, 0, 1);
-    font-weight: 700px;
-    font-size: 18px;
-    line-height: 26px;
     padding-left: 10px;
   }
 
@@ -418,10 +418,14 @@
   }
 
   &__text-area {
+    font-weight: 700px;
+    font-size: 18px;
+    line-height: 26px;
+    padding-left: 10px;
+    border: none;
     @media (min-width: @desktop-width) {
       padding-right: 200px;
     }
-
   }
 
   &__feedback {
@@ -454,6 +458,10 @@
   }
 
   &__button {
+    font-weight: 700px;
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: uppercase;
     width: 90%;
     @media (min-width: @tablet-width) {
       width: 45%;
