--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -2,7 +2,6 @@
   text-align: center;
   overflow: hidden;
   position: relative;
-  margin-top: 20px;
 
   &__photo {
     height: 100%;
@@ -16,6 +15,17 @@
     @media (min-width: @mobile-width) {
       margin-bottom: -10px;
       margin-top: -40px;
+    }
+
+    @media (min-width: @tablet-width) {
+      padding-top: 25px;
+      padding-right: 25px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-top: 10px;
+      margin-bottom: 20px;
+      margin-right: 20px;
     }
   }
 
@@ -32,28 +42,35 @@
     font-size: 18px;
     line-height: 26px;
     margin: 0;
-    padding-top: 35px;
 
     @media (min-width: @tablet-width) {
+      padding-top: 43px;
       font-size: 21px;
-      padding-bottom: 10px;
+
     }
+
   }
 
   &__description {
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
-    padding-top: 10px;
-    padding-bottom: 25px;
+    padding-top: 20px;
+    padding-bottom: 35px;
     margin: 0 auto;
 
     @media (min-width: @tablet-width) {
       font-size: 16px;
     }
+
+  }
+
+  &__description-number {
+    margin: 0;
   }
 
   &__description-container {
+    padding-top: 35px;
     @media (min-width: @tablet-width) {
       padding-top: 12px;
       padding-left: 25px;
@@ -61,6 +78,7 @@
       display: flex;
       flex-direction: column;
     }
+
   }
 
   &__item-container {
@@ -87,17 +105,19 @@
 
 .advantages__item--greyback {
   background-color: rgba(238, 238, 238, 1);
+  padding-top: 30px;
 
   @media (min-width: @tablet-width) {
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 0 65px 50px 40px;
+    padding: 0 52.5px 50px 52.5px;
 
   }
 
   @media (min-width: @desktop-width) {
     width: 100%;
+     padding: 55px 45px 40px 45px;
   }
 }
 
@@ -109,12 +129,13 @@
 
   color: #ffff;
   background-color: rgba(129, 179, 210, 1);
-  margin-top: 30px;
+
 
   @media (min-width: @tablet-width) {
     flex-wrap: nowrap;
     display: flex;
     width: 100%;
+    margin-top: 30px;
   }
 }
 
@@ -142,6 +163,8 @@
   @media (min-width: @desktop-width) {
     position: relative;
     top: 10px;
+    padding-bottom: 10px;
+
   }
 }
 
@@ -152,7 +175,7 @@
   background-image: url("../images/triangle-reverse-decorate.svg");
   width: 100%;
   height: 37px;
-  top: 12px;
+  top: -22px;
 
   @media (min-width: @tablet-width) {
     display: none;
