--- a/source/less/blocks/catalog-photos.less
+++ b/source/less/blocks/catalog-photos.less
@@ -30,11 +30,13 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: flex-start;
+      margin-bottom: 20px;
     }
 
     @media (min-width: @desktop-width) {
       display: flex;
       flex-wrap: wrap;
+      margin-bottom: 0;
     }
   }
 
@@ -131,7 +133,7 @@
     width: 100%;
     height: 1px;
     left: 0px;
-    top: 1320px;
+    top: 1270px;
     background: #E5E5E5;
     mix-blend-mode: normal;
 
@@ -167,7 +169,7 @@
     width: 100%;
     height: 1px;
     left: 0px;
-    top: 1740px;
+    top: 1690px;
     background: #E5E5E5;
     mix-blend-mode: normal;
 
@@ -215,7 +217,7 @@
   width: 100%;
   height: 1px;
   left: 0px;
-  top: 2180px;
+  top: 2120px;
   background: #E5E5E5;
   mix-blend-mode: normal;
 
