--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,13 +1,13 @@
 .intro {
   text-align: center;
-  margin: 32px 0px 16px;
+  margin: 18px 0px 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
   @media (min-width: @tablet-width) {
-    padding: 47.5px 124px 0 124px;
+    padding: 35px 124px 0 124px;
     margin: 0 auto;
   }
   @media (min-width: @desktop-width) {
@@ -17,12 +17,15 @@
 
   &__title {
     margin-bottom: 35px;
-    margin-top: 0;
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
     padding: 0 32px 0 32px;
     @media (min-width: @tablet-width) {
+      margin-top: 54px;
+      font-size: 21px;
+    }
+    @media (min-width: @desktop-width) {
       font-size: 21px;
     }
   }
@@ -33,6 +36,14 @@
     font-size: 14px;
     line-height: 21px;
   }
+  @media (min-width: @tablet-width) {
+    padding-top: 30px;
+
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 47px;
+  }
 }
 
 .catalog-intro:after {
@@ -42,7 +53,7 @@
   width: 100%;
   height: 1px;
   left: 0px;
-  top: 460px;
+  top: 420px;
   background: #E5E5E5;
   mix-blend-mode: normal;
   @media (min-width: @tablet-width) {
