--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -8,6 +8,7 @@
     height: 96px;
     display: flex;
     justify-content: center;
+    padding-right: 14px;
 }
 &__main-logo-container {
   z-index: 10;
