--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -38,12 +38,39 @@
 
     &:first-child {
       margin-right: 0px;
-      margin-left: 40px;
+      margin-left: 50px;
+      padding-top: 5px;
+      @media (min-width: @desktop-width) {
+        margin-left: 90px;
+      }
     }
-
+    &:nth-child(2) {
+      @media (min-width: @tablet-width) {
+        margin-left: 20px;
+        padding-top: 5px;
+      }
+      @media (min-width: @desktop-width) {
+        margin-right: 75px;
+      }
+    }
+    &:nth-child(3) {
+      @media (min-width: @tablet-width) {
+        padding-top: 5px;
+      }
+      @media (min-width: @desktop-width) {
+        margin-right: -35px;
+      }
+    }
    &:last-child {
      margin-right: 27px;
      margin-left: 0;
+     @media (min-width: @tablet-width) {
+      padding-top: 5px;
+    }
+     @media (min-width: @desktop-width) {
+      padding-top: 5px;
+      margin-right: 70px;
+    }
    }
        &--active {
       position: relative;
