--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -21,36 +21,37 @@
 
     }
   }
-&__content {
-  background-color: rgba(255, 255, 255, 1);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
 
-}
+  &__content {
+    background-color: rgba(255, 255, 255, 1);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 
-&__title {
-  margin: 0;
-  text-align: center;
-  padding-top: 50px;
-  padding-left: 75px;
-  padding-right: 75px;
-  font-size: 21px;
-  line-height: 26px;
-}
+  }
 
-&__text {
-  text-align: center;
-  padding-right: 42px;
-  padding-left: 41px;
-  padding-bottom: 25px;
-  font-size: 15px;
-  line-height: 21px;
-}
+  &__title {
+    margin: 0;
+    text-align: center;
+    padding-top: 50px;
+    padding-left: 75px;
+    padding-right: 75px;
+    font-size: 21px;
+    line-height: 26px;
+  }
 
-&__button {
-  margin-bottom: 35px;
-}
+  &__text {
+    text-align: center;
+    padding-right: 42px;
+    padding-left: 41px;
+    padding-bottom: 25px;
+    font-size: 15px;
+    line-height: 21px;
+  }
+
+  &__button {
+    margin-bottom: 35px;
+  }
 }
 
 .modal--closed {
@@ -80,36 +81,41 @@
 
     }
   }
-&__content {
-  background-color: rgba(255, 255, 255, 1);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
 
+  &__content {
+    background-color: rgba(255, 255, 255, 1);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+  }
+
+  &__title {
+    margin: 0;
+    text-align: center;
+    padding-top: 50px;
+    padding-left: 35px;
+    padding-right: 35px;
+    font-size: 21px;
+    line-height: 26px;
+  }
+
+  &__text {
+    text-align: center;
+    padding-right: 42px;
+    padding-left: 41px;
+    padding-bottom: 25px;
+    font-size: 15px;
+    line-height: 21px;
+  }
+
+  &__button {
+    margin-bottom: 35px;
+  }
 }
 
-&__title {
-  margin: 0;
-  text-align: center;
-  padding-top: 50px;
-  padding-left: 35px;
-  padding-right: 35px;
-  font-size: 21px;
-  line-height: 26px;
-}
-
-&__text {
-  text-align: center;
-  padding-right: 42px;
-  padding-left: 41px;
-  padding-bottom: 25px;
-  font-size: 15px;
-  line-height: 21px;
-}
-
-&__button {
+.modal-feedback__button {
   margin-bottom: 35px;
-}
 }
 
 .modal-feedback--closed {
