--- a/source/less/blocks/catalog-welcome.less
+++ b/source/less/blocks/catalog-welcome.less
@@ -36,3 +36,15 @@
         top: 220px;
       }
     }
+
+    .main-logo {
+      @media (min-width: @mobile-width) {
+        width: 229px;
+        height: 39px;
+      }
+      @media (min-width: @tablet-width) {
+      width: 459.5px;
+      height: 79.8px;
+    }
+
+  }
