--- a/source/less/blocks/common.less
+++ b/source/less/blocks/common.less
@@ -16,7 +16,7 @@
 
 body {
   min-height: 100%;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 24px;
