--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -2,4 +2,17 @@
   margin-top: 30px;
   display: block;
   border: none;
+
+  @media (min-width: @mobile-width) {
+    width: 320px;
+
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1200px;
+  }
 }
